feature-libs/organization/administration/styles/_list.scss
/* ... */
%organizationList {
  .content-wrapper,
  form {
    display: contents;
  }

  @extend %organizationTitle !optional;

  cx-split-view:not([active-view='1']) .list table {
    th,
    td {
      &.amount,
      &.dateRange,
      // cost center
      &.currency,
      // users
      &.uid,
      &.roles,
      // permissions
      &.limit {
        opacity: 0;
        width: 0.1%;
      }
      // let's make status column smaller
      &.active {
        width: 100px;
      }
    }
  }
  //allow wrapping for overly long ids
  @include forFeature('a11yTextSpacingAdjustments') {
    cx-split-view[active-view='1'] {
      .uid .text {
        margin-inline-end: 1rem;
        white-space: initial;
        word-break: break-word;
      }
    }
  }

  // required for our ng-select components
  width: 100%;
  position: relative;

  .is-empty {
    margin: 0;
    padding: 20px;
  }

  @include media-breakpoint-up(md) {
    padding-inline-start: 10px;
    padding-inline-end: 10px;
  }

  @extend %ghost !optional;

  @extend %viewHeader !optional;
  @extend %table !optional;

  cx-split-view {
    @include media-breakpoint-down(sm) {
      // ensure that the views do not flow over the page
      width: 100vw;
    }
    cx-view {
      height: auto;
      &:not([position='0']) {
        // cx-views should only take the necessary vertical space
        align-self: flex-start;
      }
    }

    @include media-breakpoint-up(lg) {
      padding-top: 40px;

      cx-view {
        &:not([position='0']) {
          display: flex;
        }
      }

      &:not([active-view='1']) {
        cx-view[position='0'] {
          padding-inline-end: var(--cx-split-gutter);
          border-inline-end: solid 0 var(--cx-color-light);
          border-inline-end-width: calc(
            min(calc(var(--cx-active-view) - 1), 1) * 1px
          );
        }
      }
    }
  }
  // TODO: (CXSPA-7155) - Remove feature flag next major release
  @include forFeature('a11yOrganizationLinkableCells') {
    cx-view {
      &[position='0'] tr {
        cursor: pointer;
      }
    }
  }

  cx-view[position='0'] > cx-table.vertical {
    table {
      border-top: solid 1px var(--cx-color-light);
      border-bottom: solid 1px var(--cx-color-light);
    }
  }

  @include cx-highContrastTheme {
    cx-view {
      .header {
        background-color: var(--cx-color-background);
      }
      .main {
        .details {
          background-color: var(--cx-color-background);
        }
      }
    }
  }

  .vertical-stacked {
    table {
      table-layout: auto;
    }
    tbody {
      border-top: solid 1px var(--cx-color-light);
      &:last-child {
        border-bottom: solid 1px var(--cx-color-light);
      }

      tr:first-child > * {
        padding-top: 20px;
      }
      tr:last-child > * {
        padding-bottom: 20px;
      }

      th,
      td {
        cx-table-data-cell {
          min-height: auto;
          a {
            padding-top: 0;
            padding-bottom: 0;
          }
        }
      }
      @include media-breakpoint-down(md) {
        th:not(:first-child),
        td:not(:first-child) {
          width: 100%;
        }
        td {
          padding-inline-start: 40px;
        }
      }
    }
  }

  .footer {
    display: flex;
    justify-content: flex-end;
    padding: 40px;
  }
  section + .footer {
    padding-top: 0;
  }

  cx-pagination {
    @include media-breakpoint-down(md) {
      margin: 0 var(--cx-spatial-md);
    }

    a {
      border-radius: 0;

      &:not(.current) {
        background-color: var(--cx-color-inverse);
        @include cx-highContrastTheme {
          background-color: var(--cx-color-background);
        }
      }

      &.disabled {
        color: var(--cx-color-light);
      }
    }
  }

  cx-org-toggle-link-cell {
    padding-inline-start: calc((var(--cx-depth-level) + 3) * 20px);
    button.tree-item-toggle {
      margin-inline-start: -40px;
      min-width: 40px;
    }
    // TODO: (CXSPA-6457) - Remove feature flag next major release
    @include forFeature('a11yListOversizedFocus') {
      button.tree-item-toggle {
        color: var(--cx-color-primary);
      }
    }
  }

  @include media-breakpoint-down(md) {
    cx-org-toggle-link-cell {
      padding-inline-start: calc(3rem + var(--cx-depth-level) * 1.5rem);
    }
  }

  @include forFeature('a11yTextSpacingAdjustments') {
    .content-wrapper ng-select.ng-select {
      .ng-value-label {
        overflow: initial;
        white-space: normal;
      }
      div.ng-select-container {
        max-height: unset;
        line-height: 1.3;
      }
    }
    .ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
      white-space: normal;
      overflow: initial;
    }
  }
}
/* ... */

